오류 디버깅
